--- a/ThinkSharer/ThinkSharer/Home/UserCenter/View/SharerThirdCollectionViewCell.xib
+++ b/ThinkSharer/ThinkSharer/Home/UserCenter/View/SharerThirdCollectionViewCell.xib
@@ -11,24 +11,24 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="SharerThirdCollectionViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="105" height="75"/>
+            <rect key="frame" x="0.0" y="0.0" width="105" height="80"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="105" height="75"/>
+                <rect key="frame" x="0.0" y="0.0" width="105" height="80"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8vz-5e-wJv">
-                        <rect key="frame" x="0.0" y="0.0" width="105" height="75"/>
+                        <rect key="frame" x="0.0" y="15" width="105" height="60"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="24" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mfq-k7-hY3">
-                                <rect key="frame" x="0.0" y="16" width="105" height="21"/>
+                                <rect key="frame" x="0.0" y="8" width="105" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="cross_bg.png" translatesAutoresizingMaskIntoConstraints="NO" id="z3C-dF-8XO">
-                                <rect key="frame" x="41" y="39" width="22" height="20"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="user_hongbao" translatesAutoresizingMaskIntoConstraints="NO" id="z3C-dF-8XO">
+                                <rect key="frame" x="41" y="32" width="22" height="20"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                         </subviews>
@@ -37,15 +37,20 @@
                 </subviews>
             </view>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="8vz-5e-wJv" secondAttribute="bottom" id="Stq-Dc-PxC"/>
-                <constraint firstItem="8vz-5e-wJv" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="WJM-Dl-ZyS"/>
+                <constraint firstAttribute="bottom" secondItem="8vz-5e-wJv" secondAttribute="bottom" constant="5" id="Stq-Dc-PxC"/>
+                <constraint firstItem="8vz-5e-wJv" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="15" id="WJM-Dl-ZyS"/>
                 <constraint firstItem="8vz-5e-wJv" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="pmT-x6-Icd"/>
                 <constraint firstAttribute="trailing" secondItem="8vz-5e-wJv" secondAttribute="trailing" id="tGB-6Q-Hvd"/>
             </constraints>
+            <connections>
+                <outlet property="containerView" destination="8vz-5e-wJv" id="AoA-7l-gDA"/>
+                <outlet property="downIcon" destination="z3C-dF-8XO" id="J53-DM-9AM"/>
+                <outlet property="uplabel" destination="Mfq-k7-hY3" id="qi9-Sh-MEJ"/>
+            </connections>
             <point key="canvasLocation" x="77.5" y="59.5"/>
         </collectionViewCell>
     </objects>
     <resources>
-        <image name="cross_bg.png" width="64" height="64"/>
+        <image name="user_hongbao" width="23" height="23"/>
     </resources>
 </document>
