--- a/ThinkSharer/ThinkSharer/Home/Login/Controller/LoginViewController.xib
+++ b/ThinkSharer/ThinkSharer/Home/Login/Controller/LoginViewController.xib
@@ -14,7 +14,6 @@
                 <outlet property="identityBackView" destination="Fpb-Bb-L8P" id="OG8-wP-qJv"/>
                 <outlet property="loginButton" destination="M0D-Lh-jkJ" id="jGR-h0-P22"/>
                 <outlet property="phoneBackView" destination="yCc-wB-QO5" id="5ro-3S-Azl"/>
-                <outlet property="rightOrWrongButton" destination="bXn-C1-m1Q" id="OVL-ba-sK1"/>
                 <outlet property="userGuideButton" destination="wLa-jb-kYY" id="6VN-qC-mIW"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="k0p-4m-kAV"/>
             </connections>
@@ -27,18 +26,10 @@
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bc0-Sd-QhD">
                     <rect key="frame" x="214" y="340" width="90" height="40"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <color key="backgroundColor" red="0.3411764705882353" green="0.74117647058823533" blue="0.83137254901960778" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <color key="backgroundColor" red="0.89803921568627454" green="0.89803921568627454" blue="0.89803921568627454" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <state key="normal" title="获取验证码">
                         <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </state>
-                </button>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wLa-jb-kYY">
-                    <rect key="frame" x="51" y="410" width="253" height="22"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <state key="normal" title="我已阅读，并同意《用户手册》">
-                        <color key="titleColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
                     </state>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M0D-Lh-jkJ">
@@ -60,12 +51,12 @@
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 </view>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bXn-C1-m1Q">
-                    <rect key="frame" x="28" y="414" width="15" height="15"/>
+                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wLa-jb-kYY">
+                    <rect key="frame" x="34" y="409" width="253" height="22"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <state key="normal" backgroundImage="login-selected">
-                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <color key="titleShadowColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <state key="normal" title="登录代表同意《用户服务条款》">
+                        <color key="titleColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
                     </state>
                 </button>
             </subviews>
@@ -73,7 +64,4 @@
             <point key="canvasLocation" x="-21" y="-118"/>
         </view>
     </objects>
-    <resources>
-        <image name="login-selected" width="15" height="15"/>
-    </resources>
 </document>
