--- a/ThinkSharer/ThinkSharer/Home/UserCenter/View/SharerFirstCollectionViewCell.xib
+++ b/ThinkSharer/ThinkSharer/Home/UserCenter/View/SharerFirstCollectionViewCell.xib
@@ -65,8 +65,8 @@
                     <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Zg-m9-kNm">
                         <rect key="frame" x="130" y="120" width="254" height="27"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="思享者文化传媒公司巴达克斯你的空间是你的" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="re5-JN-MZP">
-                                <rect key="frame" x="0.0" y="0.0" width="346.5" height="20.5"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="思享者文化传媒公司巴达克斯你的空间是你的" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="re5-JN-MZP">
+                                <rect key="frame" x="0.0" y="0.0" width="246" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.40000000000000002" green="0.40000000000000002" blue="0.40000000000000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -75,7 +75,7 @@
                         <constraints>
                             <constraint firstItem="re5-JN-MZP" firstAttribute="top" secondItem="2Zg-m9-kNm" secondAttribute="top" id="2s4-Bz-q2n"/>
                             <constraint firstItem="re5-JN-MZP" firstAttribute="leading" secondItem="2Zg-m9-kNm" secondAttribute="leading" id="Yyy-1u-k47"/>
-                            <constraint firstAttribute="trailing" secondItem="re5-JN-MZP" secondAttribute="trailing" constant="-92.5" id="bSK-Aw-sNY"/>
+                            <constraint firstAttribute="trailing" secondItem="re5-JN-MZP" secondAttribute="trailing" constant="8" id="bSK-Aw-sNY"/>
                             <constraint firstAttribute="bottom" secondItem="re5-JN-MZP" secondAttribute="bottom" constant="6.5" id="gAs-6G-lv5"/>
                         </constraints>
                     </scrollView>
