--- a/ThinkSharer/ThinkSharer/Home/ClassReserve/View/PhotoLibraryCollectionViewCell.xib
+++ b/ThinkSharer/ThinkSharer/Home/ClassReserve/View/PhotoLibraryCollectionViewCell.xib
@@ -11,17 +11,17 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="PhotoLibraryCollectionViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="193" height="248"/>
+            <rect key="frame" x="0.0" y="0.0" width="200" height="248"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="193" height="248"/>
+                <rect key="frame" x="0.0" y="0.0" width="200" height="248"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="9gB-up-R8w">
-                        <rect key="frame" x="-6" y="0.0" width="199" height="248"/>
+                        <rect key="frame" x="30" y="0.0" width="140" height="248"/>
                     </imageView>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xmY-Fd-8Fe">
-                        <rect key="frame" x="81.5" y="5" width="25" height="25"/>
+                        <rect key="frame" x="84.5" y="5" width="25" height="25"/>
                         <constraints>
                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="25" id="fDV-li-EuJ"/>
                             <constraint firstAttribute="height" constant="25" id="tnD-iC-nGP"/>
@@ -36,17 +36,17 @@
             </view>
             <constraints>
                 <constraint firstItem="xmY-Fd-8Fe" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="5" id="7YU-J9-JZH"/>
-                <constraint firstAttribute="trailing" secondItem="9gB-up-R8w" secondAttribute="trailing" id="FJ3-sh-CLM"/>
-                <constraint firstItem="xmY-Fd-8Fe" firstAttribute="centerX" secondItem="9gB-up-R8w" secondAttribute="centerX" id="QaY-l2-T3A"/>
+                <constraint firstAttribute="trailing" secondItem="9gB-up-R8w" secondAttribute="trailing" constant="30" id="FJ3-sh-CLM"/>
+                <constraint firstItem="xmY-Fd-8Fe" firstAttribute="centerX" secondItem="9gB-up-R8w" secondAttribute="centerX" constant="-3" id="QaY-l2-T3A"/>
                 <constraint firstItem="9gB-up-R8w" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="jcD-Ol-l5E"/>
-                <constraint firstItem="9gB-up-R8w" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="-6" id="qBI-tf-6w2"/>
+                <constraint firstItem="9gB-up-R8w" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="30" id="qBI-tf-6w2"/>
                 <constraint firstAttribute="bottom" secondItem="9gB-up-R8w" secondAttribute="bottom" id="sMO-0L-KjJ"/>
             </constraints>
             <size key="customSize" width="193" height="248"/>
             <connections>
                 <outlet property="photoImageView" destination="9gB-up-R8w" id="VQ0-dQ-vHf"/>
             </connections>
-            <point key="canvasLocation" x="-46.5" y="-70"/>
+            <point key="canvasLocation" x="-47" y="-70"/>
         </collectionViewCell>
     </objects>
     <resources>
